# asteroids-sdl

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Player.hpp  README.md  SDL_Exception.h  Vec2d.hpp  analyse.sh  asteroids.cpp  build.sh  config.sh  fps-analysis.cpp  handle_input.cpp  handle_input.h  handle_input.hpp  run.sh  utility.cpp  utility.h  utility.hpp
inc/: AIComponent.hpp  Application.hpp  Asteroid.hpp  AsteroidManager.hpp  AsteroidsApp.hpp  Box.hpp  Bullet.hpp  Colors.hpp  DirFlag.hpp  Enemy.hpp  EnemyManager.hpp  Engine.hpp  Entity.hpp  EntityManager.hpp  FlagEnums.hpp  GameLoop.hpp  GameOver.hpp  GameWorld.hpp  Gun.hpp  Hyperdrive.hpp  MainLevel.hpp  PhysicsComponent.hpp  PhysicsEntity.cpp  PhysicsEntity.hpp  PhysicsManager.hpp  Player.hpp  SDL_Interface.hpp  ScoreManager.hpp  Ship.hpp  Stage.hpp  StageManager.hpp  TextObject.hpp  TitleScreen.hpp  ValtrAlgorithm.hpp  Vec2d.hpp  VectorDraw.hpp  utility.hpp
include/: AIComponent.hpp  Asteroid.hpp  AsteroidsApp.hpp  Bullet.hpp  Colors.hpp  Enemy.hpp  Engine.hpp  GameOver.hpp  Gun.hpp  HighScores.hpp  Hyperdrive.hpp  MainLevel.hpp  PhysicsManager.hpp  Player.hpp  ScoreManager.hpp  Ship.hpp  TitleScreen.hpp  constants.hpp  flags.hpp
src/: AIComponent.cpp  AIComponent.hpp  Asteroid.cpp  Asteroid.hpp  AsteroidsApp.cpp  AsteroidsApp.hpp  Bullet.cpp  Bullet.hpp  CMakeLists.txt  Colors.hpp  DrawWrapLine.cpp  Enemy.cpp  Enemy.hpp  Engine.cpp  Entity.cpp  EntityManager.cpp  GameLoop.cpp  GameOver.cpp  GameOver.hpp  Gun.cpp  Gun.hpp  HighScores.cpp  Hyperdrive.cpp  MainLevel.cpp  MainLevel.hpp  PhysicsComponent.cpp  PhysicsEntity.cpp  PhysicsManager.cpp  PhysicsManager.hpp  Player.cpp  Player.hpp  ScoreManager.cpp  ScoreManager.hpp  Ship.cpp  Ship.hpp  Stage.cpp  StageManager.cpp  TextObject.cpp  TitleScreen.cpp  TitleScreen.hpp  (+8 more)
